metadata/force-app/main/default/objects/CustomName_kEWLd__c/CustomName_kEWLd__c.object-meta.xml
<CustomObject>
    <description>Description_nGzJg</description>
    <label>CustomLabel_WLXoC</label>
    <nameField>
        <label>CustomLabel_WLXoC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WLXoCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>