metadata/force-app/main/default/objects/CustomName_kEWLd__c/fields/CustomField_FEFOz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_FEFOz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldCBRxa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>